# PascalsTriangle

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CoefficientCalculator.h
src/: CMakeLists.txt  CoefficientCalculator.cpp
test/: CoefficientCalculatorTest.cpp  main.cpp
